# mactangle

./: .gitignore  CMakeLists.txt  Documentation.md  LICENSE.md  Mactangle.sln  Mactangle.vcxproj  Mactangle.vcxproj.filters  PPSaB.cpp  PPSaB.h  README.md  Resource.aps  Resource.rc  main.cpp  resource.h
.github/workflows/: cmake.yml
Debug/: vc142.idb
Debug/Mactangle.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Mactangle.lastbuildstate
Headers/: Additionals.h  Bedler.h  Dacler.h  Mactangle.h  MainClasses.h  Map.h  Offert.h  PPSaB.h  Shop.h
Mactangle/: Mactangle.vcxproj  Mactangle.vcxproj.filters
Mactangle/Debug/: vc142.idb
Mactangle/Debug/Mactangle.tlog/: CL.command.1.tlog  Mactangle.lastbuildstate
Mactangle/Release/Mactangle.tlog/: CL.command.1.tlog  Mactangle.lastbuildstate
Mactangle/Textures/: Thumbs.db
Mactangle/Textures/Gimp/: bedler.xcf  lol.xcf  maclerV4.xcf  maclerV5.xcf
Mactangle/src/: Additionals.cpp  Additionals.h  Bedler.cpp  Bedler.h  Dacler.cpp  Dacler.h  Mactangle.cpp  Mactangle.h  MainClasses.cpp  MainClasses.h  Map.cpp  Map.h  Offert.cpp  PPSaB.h  Shop.cpp  Shop.h  main.cpp
Mactangle/x64/Debug/: vc142.idb
Mactangle/x64/Debug/Mactangle.tlog/: CL.command.1.tlog  Mactangle.lastbuildstate
Mactangle/x64/Release/: Mactangle.exe.recipe  Mactangle.iobj  Mactangle.ipdb
Mactangle/x64/Release/Mactangle.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Mactangle.lastbuildstate  Mactangle.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Sources/: Additionals.cpp  All.cpp  Bedler.cpp  Dacler.cpp  Mactangle.cpp  MainClasses.cpp  Map.cpp  Offert.cpp  PPSaB.cpp  Shop.cpp
Textures/Gimp/: Dacler.xcf  forge.xcf
cmake/: FindSFML.cmake  InstallStuffs.cmake  LW.cmake
libraries/SimpleCollision/: License.md  Readme.md  simpleCollision.h
libs/CNGui/: CMakeLists.txt
libs/CNGui/examples/: container-stacking.cpp  getting-started.cpp
libs/CNGui/include/CNGui/: CNGui.hpp
libs/CNGui/include/CNGui/Containers/: Container.hpp
libs/CNGui/include/CNGui/Objects/: Button.hpp  LineEdit.hpp  Object.hpp  Poster.hpp  ProgressIndicator.hpp
libs/CNGui/include/CNGui/Utilities/: EventHandler.hpp  Font.hpp  FunctionWrapper.hpp  Shape.hpp  Style.hpp  Text.hpp
libs/CNGui/src/CNGui/Objects/: Button.cpp  LineEdit.cpp  Object.cpp  Poster.cpp  ProgressIndicator.cpp
libs/CNGui/src/CNGui/Utilities/: EventHandler.cpp  FunctionWrapper.cpp  Shape.cpp  Style.cpp  Text.cpp
libs/LW/: CMakeLists.txt
libs/SimpleCollision/: simpleCollision.cpp
old version/textures/Gimp/: Sight.xcf
rc/data/: default.json
rc/documentation/: Documentation.md
rc/icon/: icon.aps
rc/readmes/: LICENSE.md  TexturesInstruction.md
rc/textures/Gimp/: BuyButton.xcf  Heart.xcf  MactangleIcon.xcf  macler.xcf  maclerV3.xcf
src/: Game.cpp  Game.h  InputManager.cpp  InputManager.h  Main.cpp  MainExecutor.cpp  MainExecutor.h  MainResources.cpp  MainResources.h  Map.cpp  Map.h  Master.cpp  Master.h  PPSaB.cpp  Path.cpp  Renderer.cpp  Renderer.h  TextureContainer.cpp  TextureContainer.h  additionals.cpp  additionals.h  bedler.cpp  bedler.h  dacler.cpp  dacler.h  game.cpp  game.h  mactangle.cpp  mactangle.h  main.cpp  mainclasses.cpp  mainclasses.h  map.cpp  map.h  offert.cpp  offert.h  path.cpp  path.h  shop.cpp  shop.h
src/BaseClasses/: Entity.cpp  Entity.h  MovingEntity.cpp  MovingEntity.h  PositionableEntity.cpp  PositionableEntity.h
src/Helpers/: StringKey.h
src/Layout/: Map.cpp  Map.h
src/Managers/: HoldingManager.cpp  HoldingManager.h  InputManager.cpp  InputManager.h  MainResources.cpp  MainResources.h  Master.cpp  Master.h  Renderer.cpp  Renderer.h
src/Protagonists/: RemoteDecrypter.cpp  RemoteDecrypter.h
src/archive/: PPSaB.h  additionals.cpp  additionals.h  bedler.cpp  bedler.h  dacler.cpp  dacler.h  mactangle.cpp  mactangle.h  map.cpp  map.h  offert.cpp  offert.h  shop.cpp  shop.h
src/helpers/: StringKey.cpp
x64/Release/: Mactangle.iobj  Mactangle.ipdb  Mactangle.vcxproj.FileListAbsolute.txt
x64/Release/Mactangle.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Mactangle.lastbuildstate  Mactangle.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/Textures/Gimp/: maclerV2.xcf
